<resources>
    <string name="app_name">浙渔通</string>
    <string name="originalVersionRemark">更新:\n2.0.2:\n增加离线地图、轨迹录制功能\n2.0.1:\n更改首页图标和整体配色\n2.0:\n1、软件构架调整\n2、新增业务办理、记录查询、法律法规、业务流程、待办任务等功能</string>
    <string name="user_terms"><u>用户协议</u></string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="username">用户名</string>
    <string name="gird_1_in_fragment_homepage">业务办理</string>
    <string name="gird_2_in_fragment_homepage">记录查询</string>
    <string name="gird_3_in_fragment_homepage">电子签证</string>
    <string name="gird_4_in_fragment_homepage">法律法规</string>
    <string name="gird_5_in_fragment_homepage">业务流程</string>
    <string name="gird_6_in_fragment_homepage">待办任务</string>
    <string name="line_1_in_service_activity">渔船检验申报</string>
    <string name="line_2_in_service_activity">图纸审查申报</string>
    <string name="line_3_in_service_activity">产品检验申报</string>
    <string name="line_1_in_process_activity">渔船检验业务流程</string>
    <string name="line_2_in_process_activity">渔船登记业务流程</string>
    <string name="line_3_in_process_activity">捕捞许可业务流程</string>
    <string name="line_1_in_record_activity">投保查询</string>
    <string name="line_2_in_record_activity">理赔查询</string>
    <string name="line_3_in_record_activity">交易查询</string>
    <string name="line_4_in_record_activity">检验查询</string>
    <string name="line_5_in_record_activity">审图查询</string>
    <string name="line_1_in_visa_activity">出港确认</string>
    <string name="line_2_in_visa_activity">进港确认</string>
    <string name="line_3_in_visa_activity">打卡记录</string>
    <string name="line_4_in_visa_activity">出海记录</string>
    <string name="line_1_in_todo_activity">审图意见书</string>
    <string name="line_2_in_todo_activity">报检表</string>
    <string name="line_3_in_todo_activity">整改意见书</string>
    <string name="line_4_in_todo_activity">检验记录</string>
    <string name="line_1_in_ship_info_activity">渔船材质：</string>
    <string name="line_2_in_ship_info_activity">渔船长度：</string>
    <string name="line_3_in_ship_info_activity">总功率数：</string>
    <string name="line_4_in_ship_info_activity">总吨位数：</string>
    <string name="line_5_in_ship_info_activity">渔船类型：</string>
    <string name="line_6_in_ship_info_activity">作业类型：</string>
    <string name="line_7_in_ship_info_activity">更新时间：</string>
    <string name="line_1_in_route_activity">起始时间：</string>
    <string name="line_2_in_route_activity">结束时间：</string>
    <string name="line_3_in_route_activity">显示中间点：</string>
    <string name="rcldServerIP">http://120.27.149.252</string>
    <string name="defaultServerIP_1">http://120.27.149.252</string>
    <string name="serverIP">http://61.164.218.155</string>
    <string name="loginUrl">:8085/Account/login</string>
    <string name="sendSMSUrl">:8085/Account/SendSms</string>
    <string name="registerUrl">:8085/Account/Register</string>
    <string name="getTodoCountUrl">:8085/Business/getTodoCount</string>
    <string name="changePSWUrl">:8085/Business/changePwd</string>
    <string name="forgetPSWUrl">:8085/Account/changePwd</string>
    <string name="getLawTitleListUrl">:8085/Business/getLawTitleList</string>
    <string name="getLawChapterByLawIdUrl">:8085/Business/getLawChapterByLawId</string>
    <string name="getLawClauseByChapterIdUrl">:8085/Business/getLawClauseByChapterId</string>
    <string name="getLatestApkVersionURL">:8085/Account/getLatestApkVersion</string>
    <string name="downloadUrl">:5000/bpm/zytyumin.apk</string>
    <string name="getShipInfoByNo">:5000/bpm/YZSoft/Webservice/AppWebservice.asmx/GetShipInfoByNo</string>
    <string name="process_line_1_url">:5008/WebReport/ReportServer?reportlet=zhuangby%2F%5B6e14%5D%5B4e1a%5D%5B8239%5D%5B8236%5D%5B68c0%5D%5B9a8c%5D%5B8bb8%5D%5B53ef%5D_1.cpt</string>
    <string name="process_line_2_url">:5008/WebReport/ReportServer?reportlet=zhuangby%2F%5B6e14%5D%5B4e1a%5D%5B8239%5D%5B8236%5D%5B767b%5D%5B8bb0%5D_1.cpt</string>
    <string name="process_line_3_url">:5008/WebReport/ReportServer?reportlet=zhuangby%2F%5B6e14%5D%5B4e1a%5D%5B6355%5D%5B635e%5D%5B8bb8%5D%5B53ef%5D_1.cpt</string>
    <string name="service_line_1_url">:5008/WebReport/ReportServer?reportlet=apply%2Fchuanjian_1_phone.cpt&amp;op=write&amp;app_account=</string>
    <string name="service_line_2_url">:5008/WebReport/ReportServer?reportlet=apply%2Fexamine_apply_phone.cpt&amp;op=write&amp;user=</string>
    <string name="service_line_3_url">:</string>
    <string name="get_todo_line_1_url">:8085/Business/getDrawingExamineOpinionList</string>
    <string name="get_todo_line_2_url">:8085/Business/getDetectInfoDetailInspectionList</string>
    <string name="get_todo_line_3_url">:8085/Business/getDetectInfoOpinionList</string>
    <string name="get_todo_line_4_url">:</string>
    <string name="fr_todo_line_1_url">:5008/WebReport/ReportServer?reportlet=apply%2Fpic_opinion_phone.cpt&amp;op=write&amp;appid=</string>
    <string name="fr_todo_line_2_url">:5008/WebReport/ReportServer?reportlet=apply%2Fbaojian.cpt&amp;op=write&amp;appid=</string>
    <string name="fr_todo_line_3_url">:5008/WebReport/ReportServer?reportlet=apply%2Fchange_opinion_phone.cpt&amp;op=write&amp;appid=</string>
    <string name="fr_todo_line_4_url">:</string>
    <string name="shipGetUrl">/api/ship/get.json</string>
    <string name="shipUpdateUrl">/api/ship/update.json</string>
    <string name="fenceUrl">/api/fence/all.json</string>
    <string name="punchGetUrl">/api/punch/get.json</string>
    <string name="iofGetUrl">/api/iof/get.json</string>
    <string name="punchAllByPageUrl">/api/punch/allByPage.json</string>
    <string name="trailGetUrl">/api/trail/get.json</string>
    <string name="sailorNewUrl">/api/iof/sailor/new.json</string>
    <string name="helpAlarmUrl">/api/device/helpAlarm.json</string>
    <string name="changePWUrl">/api/password/change.json</string>
    <string name="feedbackUrl">/api/feedback/save.json</string>
    <string name="fenceConstructionUrl">/api/fence/construction.json</string>
    <string name="getDownLoadUrl">/api/app/fishermanApp.json</string>
    <string name="appVersionUrl">/api/app/latestVersion.json</string>
    <string name="baiduGeoConvUrl">http://api.map.baidu.com/geoconv/v1/</string>
    <string name="baiduGeoConvAppKey">stfZ8nXV0rvMfTLuAAY9SX2AqgLGLuOQ</string>
    <string name="title_activity_visa">VisaActivity</string>
    <string name="c_boat_name">渔船名称</string>
    <string name="c_boat_cde">渔船代码</string>
    <string name="c_ply_app_no">投保单号</string>
    <string name="c_ply_no">互保凭证号</string>
    <string name="c_nme_cn">产品名称</string>
    <string name="c_app_nme">投保人姓名</string>
    <string name="c_app_cde">投保人代码</string>
    <string name="c_insurance_date">投保日期</string>
    <string name="t_insrnc_bgn_tm">保险起期</string>
    <string name="T_insrnc_end_tm">保险止期</string>
    <string name="c_is_owe_money">是否欠费</string>
    <string name="n_prm">保费合计</string>
    <string name="n_amt">保额合计</string>
    <string name="t_app_udr_tm">提交核保日期</string>
    <string name="n_rate">费率</string>
    <string name="t_udr_date">核保日期</string>
    <string name="c_orig_flg">新保/续保</string>
    <string name="c_udr_mrk">核保标志</string>
    <string name="c_edr_type">批改类型</string>
    <string name="n_pay_tms">理算次数</string>
    <string name="c_clm_no">理赔编号</string>
    <string name="c_dpt_cnm">承保机构</string>
    <string name="n_sum_clm_amt">赔款总金额</string>
    <string name="c_clm_mainstatus">赔案主状态</string>
    <string name="t_clm_rgst_tm">立案日期</string>
    <string name="t_cls_tm">结案日期</string>
    <string name="c_eac_dcm_no">结案归档号</string>
    <string name="c_prod_name">产品名称</string>
    <string name="trading_detail_info">渔船交易详细信息</string>
    <string name="c_prn_no">合同号</string>
    <string name="c_accept_dpt_name">受理机构</string>
    <string name="c_delfalg">合同状态</string>
    <string name="n_transfer_price_lower">转让价格(万元)</string>
    <string name="n_22_jia_prop">转让产权(%)</string>
    <string name="c_22_deal_mode">买卖后渔船处理方式</string>
    <string name="c_signed_addr">鉴定地点</string>
    <string name="t_signed_date">鉴定日期</string>
    <string name="c_seller_name">出卖人</string>
    <string name="c_buyer_name">买受人</string>
    <string name="buyer_link_name">买方联系人</string>
    <string name="seller_link_name">卖方联系人</string>
    <string name="c_seller_card_holder">出卖人持证人</string>
    <string name="c_buyer_card_holder">买方持证人</string>
    <string name="buyer_link_tel">买方联系人电话</string>
    <string name="seller_link_tel">卖方联系人电话</string>
    <string name="fishing_permit_period_date">捕捉许可截止日</string>
    <string name="fishing_permit_no">捕捉许可编号</string>
    <string name="vessel_cert_period_date">渔船证件截止日</string>
    <string name="vessel_cert_number">渔船证件号</string>
    <string name="register_period_date">注册截止日</string>
    <string name="register_number">注册号</string>
    <string name="ownership_number">渔船归属号</string>
    <string name="ownership_get_date">渔船归属日期</string>
    <string name="norm_permit_number">普通允许号</string>
    <string name="norm_permit_period_date">普通允许号有效期</string>
    <string name="remeber_password">记住密码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="switch_wifi">建议切换到WIFI模式！</string>
    <string name="no_network">无法连接服务器，请检查网络！</string>
    <string name="ship_info_title">渔船信息</string>
    <string name="ship_detect_info_title">检验信息</string>
    <string name="port_basic_info">渔港基本信息</string>
    <string name="port_detail_info">渔港详细信息</string>
    <string name="insurance_detail_title">投保详细信息</string>
    <string name="claim_detail_title">理赔详细信息</string>
    <string name="detail_oil_patch">渔船油补详细信息</string>
    <string name="ship_name">船名</string>
    <string name="ship_no">渔船编码</string>
    <string name="ship_port">船籍港</string>
    <string name="disc_ship">渔船所属地</string>
    <string name="owner_account">账号</string>
    <string name="owner_account_name">开户名</string>
    <string name="owner_bank_account">银行账户</string>
    <string name="dist_ship_district">渔船所属地</string>
    <string name="ship_age">船龄</string>
    <string name="ship_business_type">渔船业务类型</string>
    <string name="ship_business_type_t">业务类型</string>
    <string name="ship_type">船舶类型</string>
    <string name="ship_dict_job_type">兼做作业类型</string>
    <string name="main_ship_job_type">主作业类型</string>
    <string name="ship_job_way">兼做作业方式</string>
    <string name="main_ship_job_way">主作业方式</string>
    <string name="ship_length">船长(米)</string>
    <string name="ship_tot_length">总长(米)</string>
    <string name="ship_tot_ton">总吨位(吨)</string>
    <string name="ship_width">型宽(米)</string>
    <string name="ship_deep">型深(米)</string>
    <string name="ship_tot_power">主机总功率</string>
    <string name="total_ton">总吨位</string>
    <string name="last_year_oil_patch">去年油补</string>
    <string name="this_year_oil_patch">今年油补</string>
    <string name="oil_patch">油补</string>
    <string name="Owner_account_name">开户名</string>
    <string name="dict_ship_material">渔船材质</string>
    <string name="ship_build_comp_date">渔船建造日期</string>
    <string name="ship_engine_amount">渔船发动机个数</string>
    <string name="job_place">渔船作业范围</string>
    <string name="ship_owner_info">渔船所有人信息</string>
    <string name="owner_name">渔船所有人</string>
    <string name="owner_no">渔船所有人身份证号</string>
    <string name="owner_addr">渔船所有人住址</string>
    <string name="owner_tel">渔船所有人手机号</string>
    <string name="owner_contact">联系电话</string>
    <string name="cert_info_title">证书信息</string>
    <string name="patch_info">补助信息</string>
    <string name="job_way">作业方式</string>
    <string name="fr_cancel">取消</string>
    <string name="fr_take_photo">拍摄</string>
    <string name="fr_select_from_albums">从相册选择</string>
</resources>