<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/main_menu_background"
                android:padding="10dip" >

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom" android:paddingLeft="16dp" android:paddingTop="14dp"
            android:paddingRight="16dp" android:paddingBottom="23dp" android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true">

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/fr_take_photo"
                android:id="@+id/fr_picture_photo" android:gravity="center" android:textSize="18dp"
                android:background="#ffffffff"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/fr_select_from_albums"
                android:id="@+id/fr_picture_select" android:gravity="center" android:textSize="18dp" android:autoText="false"
                android:background="#ffffffff" android:layout_marginTop="5dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/fr_cancel"
                android:id="@+id/fr_picture_cancel" android:gravity="center" android:textSize="18dp"
                android:background="#ffffffff" android:layout_marginTop="16dp"/>
    </LinearLayout>

</RelativeLayout>