<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".rcld.RouteActivity"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <com.cetcme.rcldandroidZhejiang.MyClass.NavigationView
        android:id="@+id/nav_main_in_route_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout style="@style/wrap_layout" >
                <!-- 上圆角-->
                <LinearLayout style="@style/top_layout"
                              android:id="@+id/line_1_in_route_activity">
                    <TextView style="@style/userText"
                              android:id="@+id/textView_1_in_route_activity"
                              android:text="@string/line_1_in_route_activity" />
                </LinearLayout>
                <!-- 分割线 -->
                <View style="@style/bg_line"/>

                <!-- 无圆角-->
                <LinearLayout style="@style/mid_layout_light"
                              android:id="@+id/line_2_in_route_activity" >
                    <TextView style="@style/userText"
                              android:id="@+id/textView_2_in_route_activity"
                              android:text="@string/line_2_in_route_activity" />
                </LinearLayout>
                <View style="@style/bg_line"/>

                <!-- 下圆角-->
                <LinearLayout style="@style/bottom_layout"
                              android:id="@+id/line_3_in_route_activity" >
                    <TextView style="@style/userText"
                              android:id="@+id/textView_3_in_route_activity"
                              android:text="@string/line_3_in_route_activity" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="查询"
                android:id="@+id/search_button_in_route_activity"
                android:background="@drawable/single_select"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:onClick="searchButtonTapped"/>


            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>



    </ScrollView>



</LinearLayout>
